--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/schematics": "^9.2.0",
     "@ngrx/store": "^9.2.0",
     "@ngrx/store-devtools": "^9.2.0",
+    "http-status-codes": "1.4.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -45,6 +46,7 @@
     "faker": "4.1.0",
     "husky": "^4.2.5",
     "jasmine-core": "~3.5.0",
+    "jasmine-marbles": "0.6.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~5.0.0",
     "karma-chrome-launcher": "~3.1.0",
