--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-  "cSpell.words": ["Devtools", "Sidenav", "serializers"]
+  "cSpell.words": [
+    "Angular",
+    "Angular’s",
+    "Devtools",
+    "Sidenav",
+    "ngneat",
+    "paginator",
+    "s",
+    "serializers"
+  ]
 }
