--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/compiler": "~9.1.4",
     "@angular/core": "~9.1.4",
     "@angular/forms": "~9.1.4",
+    "@angular/localize": "^9.1.12",
     "@angular/material": "^9.2.2",
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
@@ -55,6 +56,7 @@
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
     "miragejs": "0.1.40",
+    "ng-mocks": "10.1.1",
     "prettier": "2.0.5",
     "pretty-quick": "2.0.1",
     "protractor": "~5.4.3",
