--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngrx/store": "^9.2.0",
     "@ngrx/store-devtools": "^9.2.0",
     "http-status-codes": "1.4.0",
+    "inflected": "^2.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
