--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.1.2",
-    "@angular/cdk": "^10.2.1",
-    "@angular/common": "~10.1.2",
-    "@angular/compiler": "~10.1.2",
-    "@angular/core": "~10.1.2",
-    "@angular/forms": "~10.1.2",
-    "@angular/localize": "^10.1.2",
-    "@angular/material": "^10.2.1",
-    "@angular/platform-browser": "~10.1.2",
-    "@angular/platform-browser-dynamic": "~10.1.2",
-    "@angular/router": "~10.1.2",
+    "@angular/animations": "^10.1.4",
+    "@angular/cdk": "^10.2.4",
+    "@angular/common": "^10.1.4",
+    "@angular/compiler": "^10.1.4",
+    "@angular/core": "^10.1.4",
+    "@angular/forms": "^10.1.4",
+    "@angular/localize": "^10.1.4",
+    "@angular/material": "^10.2.4",
+    "@angular/platform-browser": "^10.1.4",
+    "@angular/platform-browser-dynamic": "^10.1.4",
+    "@angular/router": "^10.1.4",
     "@ngrx/effects": "^10.0.0",
     "@ngrx/entity": "^10.0.0",
     "@ngrx/schematics": "^10.0.0",
@@ -36,34 +36,34 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.2",
-    "@angular/cli": "~10.1.2",
-    "@angular/compiler-cli": "~10.1.2",
-    "@angular/language-service": "~10.1.2",
+    "@angular-devkit/build-angular": "^0.1001.2",
+    "@angular/cli": "^10.1.4",
+    "@angular/compiler-cli": "^10.1.4",
+    "@angular/language-service": "^10.1.4",
     "@types/faker": "4.1.12",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "^3.5.14",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.62",
     "codelyzer": "^5.1.2",
     "faker": "4.1.0",
-    "husky": "^4.2.5",
+    "husky": "^4.3.0",
     "jasmine-core": "~3.5.0",
     "jasmine-marbles": "0.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "^5.0.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "miragejs": "0.1.40",
     "ng-mocks": "10.1.1",
     "prettier": "2.0.5",
     "pretty-quick": "2.0.1",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "tslint-config-prettier": "1.18.0",
     "tslint-plugin-prettier": "2.3.0",
-    "typescript": "~4.0.2"
+    "typescript": "^4.0.3"
   }
 }
