--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "^10.1.4",
     "@angular/platform-browser-dynamic": "^10.1.4",
     "@angular/router": "^10.1.4",
+    "@ericblade/quagga2": "^1.2.5",
     "@ngrx/effects": "^10.0.0",
     "@ngrx/entity": "^10.0.0",
     "@ngrx/schematics": "^10.0.0",
