--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ngrx/store-devtools": "^10.0.0",
     "http-status-codes": "1.4.0",
     "inflected": "^2.1.0",
+    "lodash.clonedeep": "^4.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
